...
        <scene sceneID="vQy-4h-SxI">
            <objects>
                <viewController storyboardIdentifier="Login" id="OTo-Ay-JXy" customClass="LoginViewController" customModule="KcalLogger" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="FIe-qZ-gsL">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Calories Logger" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TEn-0o-dPE">
                                        <rect key="frame" x="10" y="46" width="300" height="48"/>
                                        <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="30"/>
...
                                <rect key="frame" x="40" y="150" width="240" height="140"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pZx-tO-NkB">
                                        <rect key="frame" x="0.0" y="0.0" width="240" height="40"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.029692292944785276" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="go" smartInsertDeleteType="no" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FWF-q4-ejF">
                                        <rect key="frame" x="0.0" y="50" width="240" height="40"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.02969229294" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            </attributes>
                                        </fragment>
                                        <fragment content="Sign Up">
                                            <attributes>
                                                <font key="NSFont" metaFont="system" size="15"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                <state key="normal" title="Recover Password"/>
                                <connections>
                                    <action selector="recoverPasswordPressed:" destination="OTo-Ay-JXy" eventType="touchUpInside" id="Pse-TM-qZW"/>
...
        <scene sceneID="Aj0-Uq-A7I">
            <objects>
                <viewController storyboardIdentifier="Registration" title="RegisterViewController" id="8el-N4-vjP" customClass="RegistrationViewController" customModule="KcalLogger" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Obp-HY-VdF">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="go" smartInsertDeleteType="no" smartQuotesType="no" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jaW-O0-WF7">
                                        <rect key="frame" x="0.0" y="50" width="240" height="40"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.02969229294" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <textInputTraits key="textInputTraits" returnKeyType="go" secureTextEntry="YES" textContentType="new-password"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4D7-7h-9aa">
                                        <rect key="frame" x="0.0" y="150" width="240" height="40"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.02969229294" colorSpace="custom" customColorSpace="sRGB"/>
...
