...

        if let email = emailFormField.text, email.count > 0, email.isValidEmail() {
            emailToRecover = email
        }
        AlertHelper.displayEmailRequest(defaultText: emailToRecover, displayTo: self) { (email) in
            self.viewModel.recoverPassword(success: {
                AlertHelper.displayAlert(title: "Password Recovery", message: "Recovery email sent", displayTo: self)
            }, failure: { (error) in
                AlertHelper.displayAlert(title: "Password Recovery", message: error, displayTo: self)
            })
        }
    }
}
...
