...
    internal let title = "Settings"

    internal let deleteMessageHeader: String = "Delete Account"
    internal var deleteMessageMessageOne: String {
        return handlingOtherUser ? "Are you sure you want to delete \(username)'s account?" : "Are you sure you want to delete your account?"
    }
    internal let deleteMessageMessageTwo: String = "Are you sure? This action is irreversible!"
    internal let deleteMessageSuccess: String = "The account will be deleted"
    internal let deleteMessageError: String = "Error deleting account. Please try again later"

    internal var username: String {
        return user?.username ?? ""
    }

...
