...
                    AlertHelper.displayAlert(title: "Change Password", message: "You cannot change other user's passwords.", displayTo: self)
                } else {
                    self.performSegue(withIdentifier: "ShowPasswordChange", sender: self)
                }
            } else if indexPath.item == 3 {
                if !viewModel.handlingOtherUser {
                    AlertHelper.displayAlert(title: "Edit Roles", message: "You cannot edit your own roles", displayTo: self)
                } else {
                    if viewModel.canEditRoles {
                        self.performSegue(withIdentifier: "ShowRoles", sender: self)
                    } else {
                        AlertHelper.displayAlert(title: "Edit Roles", message: "You cannot edit users's roles with a higher role than yourself", displayTo: self)
                    }
...
